[package]
name = "wyhash2"
version = "0.1.0"
authors = ["JackThomson2 <jackathomson@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple wyhash2 implementation in rust."
repository = "https://github.com/JackThomson2/wyhash2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []

# Enables nightly features for core intrisics such as likely and unlikely
nightly = []