[package]
name = "wyhash2"
version = "0.2.1"
authors = ["JackThomson2 <jackathomson@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple wyhash2 implementation in rust."
repository = "https://github.com/JackThomson2/wyhash2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no-std-compat = "0.4"

[features]
default = [ "std" ] # Default to using the std
# Disable for no_std
std = [ "no-std-compat/std" ]

# Enables nightly features for core intrisics such as likely and unlikely
nightly = []